修改请求加密方式